# valentine_app

./: .gitignore  README.md  finale.html  finale.js  game.js  index.html  package-lock.json  package.json  platformer-engine.js  pyproject.toml  question.html  question.js  styles.css  trivia.html  trivia.js  vite.config.js
.github/workflows/: pages.yml
assets/audio/: README.md
assets/sprites/: README.md
data/: trivia-questions.json
lovequest_tools/: __init__.py  cli.py
