[project]
name = "valentine-love-quest"
version = "0.1.0"
description = "Valentine themed 3-level platformer love quest"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
serve = "lovequest_tools.cli:serve"
check = "lovequest_tools.cli:check"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lovequest_tools"]
